--- a/css/sample.css
+++ b/css/sample.css
@@ -132,3 +132,15 @@ nav .icon-burger .line {
 .name{
 	color: black;
 }
+
+
+/* sample */
+.w3-content,
+.w3-auto {
+    margin-left: auto;
+    margin-right: auto
+}
+
+.w3-content {
+    max-width: 980px
+}
