--- a/css/sample.css
+++ b/css/sample.css
@@ -144,3 +144,21 @@ nav .icon-burger .line {
 .w3-content {
     max-width: 980px
 }
+.h1{
+	font-size: 25px;
+	font-family: 'Times New Roman', Times, serif;
+	color:black;
+
+	text-align: center;
+}
+.par{
+	font-size: 20px;
+	font-family: 'Times New Roman', Times, serif;
+	color:black;
+
+	text-align: justify;
+	text-indent: 5%;
+	margin-right: 5%;
+	margin-left: 5%;
+
+}
